<resources>
    <string name="app_name">ToDo List</string>
    <string name="auther">An application by Fashan</string>
    <string name="elias">Elias</string>
    <string name="pierre">Pierre</string>
    <string name="pavan">Pavan</string>
    <string name="thoshith">Thoshith</string>
    <string name="fashan">Fashan</string>
    <string name="title_activity_list_screen">list_screen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add">New</string>
    <string name="addnew">Add</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>